multiple classes in manifiest

--- a/preseed/preseed-desktop.cfg
+++ b/preseed/preseed-desktop.cfg
@@ -1,5 +1,6 @@
 ### Preseed Guide: https://help.ubuntu.com/14.04/installation-guide/i386/apbs04.html
 ### Inspiration: https://gist.github.com/hitsumabushi/11104627
+### Inspiration: https://gist.github.com/hitsumabushi/11104627
 
 ### Localization
 # Preseeding only locale sets language, country and locale.
@@ -51,10 +52,10 @@ d-i passwd/root-password password password
 d-i passwd/root-password-again password password
 
 # Default User
-d-i passwd/user-fullname string kleer
-d-i passwd/username string kleer
-d-i passwd/user-password password kleer
-d-i passwd/user-password-again password kleer
+d-i passwd/user-fullname string vagrant
+d-i passwd/username string vagrant
+d-i passwd/user-password password vagrant
+d-i passwd/user-password-again password vagrant
 d-i user-setup/encrypt-home boolean false
 d-i user-setup/allow-password-weak boolean true
 
