ubuntu desktop builder

--- a/preseed/preseed-desktop.cfg
+++ b/preseed/preseed-desktop.cfg
@@ -22,7 +22,7 @@ d-i time/zone string America/Lima
 d-i clock-setup/utc boolean true
 
 ### Packages
-tasksel tasksel/first multiselect standard, ubuntu-server
+tasksel tasksel/first multiselect standard, xubuntu-desktop
 
 # No language support packages.
 d-i pkgsel/install-language-support boolean false
