--- a/preseed/preseed.cfg
+++ b/preseed/preseed.cfg
@@ -1,6 +1,11 @@
 ### Preseed Guide: https://help.ubuntu.com/14.04/installation-guide/i386/apbs04.html
-### Inspiration: https://gist.github.com/hitsumabushi/11104627
-### Inspiration: https://gist.github.com/hitsumabushi/11104627
+# Inspiration: https://gist.github.com/hitsumabushi/11104627
+# Inspiration: https://gist.github.com/hitsumabushi/11104627
+
+### For Ubiquity (Ubuntu Desktop Installer) 
+# Guide https://wiki.ubuntu.com/UbiquityAutomation
+# Inspiration https://groups.google.com/forum/#!topic/packer-tool/SWhoARVwVnM
+# Inspiration https://gist.github.com/moonwitch/11100762
 
 ### Localization
 # Preseeding only locale sets language, country and locale.
@@ -8,9 +13,7 @@ d-i debian-installer/locale string en_US
 
 ### Keyboards
 d-i console-setup/ask_detect boolean false
-d-i keyboard-configuration/layout select USA
-#In most cases the correct keyboard architecture is selected by default
-#d-i keyboard-configuration/modelcode string pc105
+d-i keyboard-configuration/layoutcode string us
 
 ### Network
 #Any host and domain
@@ -22,13 +25,15 @@ d-i time/zone string America/Lima
 d-i clock-setup/utc boolean true
 
 ### Packages
-tasksel tasksel/first multiselect standard, ubuntu-server
+tasksel tasksel/first multiselect standard
 
 # No language support packages.
 d-i pkgsel/install-language-support boolean false
 
 # Individual additional packages to install
-d-i pkgsel/include string build-essential ssh nfs-common
+# pkgsel/include doesn't work in Ubiquity
+ubiquity ubiquity/success_command string \
+  in-target apt-get install -y ssh nfs-common
 
 # For the update
 d-i pkgsel/update-policy select none
@@ -63,4 +68,5 @@ d-i user-setup/allow-password-weak boolean true
 d-i grub-installer/only_debian boolean true
 
 ### Finish
-d-i finish-install/reboot_in_progress note
+# Automatically reboot when the installer completes.
+ubiquity ubiquity/reboot boolean true
