no vagrant user

--- a/preseed/preseed.cfg
+++ b/preseed/preseed.cfg
@@ -31,9 +31,10 @@ tasksel tasksel/first multiselect standard
 d-i pkgsel/install-language-support boolean false
 
 # Individual additional packages to install
-# pkgsel/include doesn't work in Ubiquity
+# Remove unnecessary big packages
 ubiquity ubiquity/success_command string \
-  in-target apt-get install -y ssh nfs-common
+  in-target apt-get install -y ssh nfs-common; \
+  in-target apt-get remove -y thunderbird gimp gmusicbrowser pidgin
 
 # For the update
 d-i pkgsel/update-policy select none
@@ -57,10 +58,10 @@ d-i passwd/root-password password password
 d-i passwd/root-password-again password password
 
 # Default User
-d-i passwd/user-fullname string vagrant
-d-i passwd/username string vagrant
-d-i passwd/user-password password vagrant
-d-i passwd/user-password-again password vagrant
+d-i passwd/user-fullname string kleer
+d-i passwd/username string kleer
+d-i passwd/user-password password kleer
+d-i passwd/user-password-again password kleer
 d-i user-setup/encrypt-home boolean false
 d-i user-setup/allow-password-weak boolean true
 
