--- a/preseed/preseed.cfg
+++ b/preseed/preseed.cfg
@@ -9,11 +9,12 @@
 
 ### Localization
 # Preseeding only locale sets language, country and locale.
-d-i debian-installer/locale string en_US
+d-i debian-installer/locale string es_PE
+d-i localechooser/supported-locales multiselect en_US
 
 ### Keyboards
 d-i console-setup/ask_detect boolean false
-d-i keyboard-configuration/layoutcode string us
+d-i keyboard-configuration/layoutcode string es
 
 ### Network
 #Any host and domain
